@@ -144,7 +144,7 @@ DESCRIPTION
             }
 
 CONSTRUCTOR
-  new( [ $path / $filename ] )
+  new( [ $path / $filename, \%options ] )
     Creates a new instance of this module. A path to a directory in which
     JSON localization files exist, or a path to a specific localization
     file, *may* be supplied. If you pass a directory, all JSON localization
@@ -153,6 +153,13 @@ CONSTRUCTOR
 
     Note that "Locale::Wolowitz" will ignore dotfiles in the provided path
     (e.g. hidden files, backups files, etc.).
+
+    A hash-ref of options can also be provided. The only option currently
+    supported is "utf8", which is on by default. If on, all JSON files are
+    assumed to be in UTF-8 character set and will be automatically decoded.
+    Provide a false value if your files are not UTF-8 encoded, for example:
+
+            Locale::Wolowitz->new( '/path/to/files', { utf8 => 0 } );
 
 OBJECT METHODS
   load_path( $path / $filename )
